--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap');
+
+:root {
+  --color-bg-light-grey-1: rgb(247, 247, 247);
+  --color-bg-light-grey-2: rgb(230, 230, 230);
+  --color-bg-light-grey-3: rgb(202, 202, 202);
+  --color-text-light-grey: #767676;
+  --color-text-dark-grey: #111;
+  --color-primary-light: #3cb46e;
+  --color-primary-dark: #2e9e5d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  /* 1rem = 10px */
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  color: var(--color-text-dark-grey);
+  font-size: 1.6rem;
 }
