--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap');
 
 :root {
-  --color-bg-light-grey-1: rgb(247, 247, 247);
-  --color-bg-light-grey-2: rgb(230, 230, 230);
-  --color-bg-light-grey-3: rgb(202, 202, 202);
-  --color-text-light-grey: #767676;
-  --color-text-dark-grey: #111;
-  --color-primary-light: #3cb46e;
-  --color-primary-dark: #2e9e5d;
+  --color-bg-1: rgb(247, 247, 247);
+  --color-bg-2: rgb(230, 230, 230);
+  --color-bg-3: rgb(202, 202, 202);
+  --color-text-1: #767676;
+  --color-text-2: #4e4e4e;
+  --color-text-3: #111;
+  --color-primary-1: #003366;
+  --color-primary-2: #003366e0;
 }
 
 *,
@@ -25,6 +26,6 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  color: var(--color-text-dark-grey);
+  color: var(--color-text-2);
   font-size: 1.6rem;
 }
