added post page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@
   --color-text-3: #111;
   --color-primary-1: #003366;
   --color-primary-2: #003366e0;
+  --color-red-1: #cc0000;
+  --color-red-2: #ee0000;
 }
 
 *,
