--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,79 @@
 .layout {
-  margin-top: 6.5rem;
-  width: 90%;
-  margin: 0 auto;
+  width: 97%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.primaryBtn {
+  font-family: inherit;
+  font-size: 1.6rem;
+  display: block;
+  padding: 0.4rem 1.2rem;
+  cursor: pointer;
+  border-radius: 3px;
+  text-decoration: none;
+  color: #fff;
+  background-color: var(--color-primary-1);
+  user-select: none;
+  border: none;
+  transition: background-color 0.5s;
+}
+
+.primaryBtn:hover {
+  background-color: var(--color-primary-2);
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+/* utilities */
+
+.pt1 {
+  padding-top: 1rem;
+}
+
+.buttonReset {
+  font-family: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonReset:disabled {
+  cursor: not-allowed;
+}
+
+.mlAuto {
+  margin-left: auto;
+}
+
+.flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mt3 {
+  margin-top: 3rem;
+}
+
+.mhAuto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* responsive styles */
+@media screen and (min-width: 500px) {
+  .layout {
+    width: 90%;
+  }
 }
