--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,13 @@
   margin-right: auto;
 }
 
+.pFixCenter {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* responsive styles */
 @media screen and (min-width: 500px) {
   .layout {
