implemented google oauth endpoints

--- a/client/src/components/FullPageSpinner/FullPageSpinner.module.css
+++ b/client/src/components/FullPageSpinner/FullPageSpinner.module.css
@@ -1,3 +1,12 @@
+.fullpageCenter {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .spinner {
   color: var(--color-primary-1);
 }
