--- a/client/src/components/GifRecorder/GifRecorder.module.css
+++ b/client/src/components/GifRecorder/GifRecorder.module.css
@@ -63,6 +63,12 @@
   animation-timing-function: linear;
 }
 
+.errorMsg {
+  font-size: 1.2rem;
+  color: var(--color-red-1);
+  margin-top: 0.5rem;
+}
+
 @keyframes pulse {
   0% {
     box-shadow: 0px 0px 5px 0px rgba(173, 0, 0, 0.3);
