--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,13 @@
 
 /* utilities */
 
+hr {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
 .pt1 {
   padding-top: 1rem;
 }
@@ -65,6 +72,10 @@
   margin-left: 1rem;
 }
 
+.mb5px {
+  margin-bottom: 5px;
+}
+
 .flexCenter {
   display: flex;
   justify-content: center;
@@ -80,6 +91,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.flexColCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mt5px {
+  margin-top: 5px;
 }
 
 .mt3 {
@@ -105,6 +126,13 @@
 .mhAuto {
   margin-left: auto;
   margin-right: auto;
+}
+.textCenter {
+  text-align: center;
+}
+
+.fontSize11px {
+  font-size: 11px;
 }
 
 .pFixCenter {
