--- a/client/src/components/TextEditor/TextEditor.module.css
+++ b/client/src/components/TextEditor/TextEditor.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   padding: 1rem;
   background-color: var(--color-bg-1);
-  /* border: 1px solid var(--color-bg-3); */
+  border: 1px solid var(--color-bg-3);
   border-radius: 3px;
   resize: none;
   outline: none;
